# scrapy-feedexporter-azure

./: .gitignore  boris.py  requirements.txt  setup.cfg  tox.ini
scrapy-feedexporter-adls/: requirements.txt
scrapy-feedexporter-azure/: __init__.py  az_storage_backend.py  storage.py
scrapy_feedexporter_azure/: storage.py
tests/: test_adls_feedexporter_storage.py  test_blob_storage_feedexporter.py
