[metadata]
name = scrapy_feedexporter_azure
version = 0.0.1
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Framework :: Scrapy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = scrapy_feedexporter_azure
install_requires =
    Scrapy==2.5.0
    azure-storage-file-datalake==12.4.0
    azure-identity==1.6.1
tests_require =
    pytest==6.2.5
    pytest-mock==3.6.1
