[metadata]
name = scrapy_feedexporter_azure
version = 0.0.1
description = A scrapy storage extension to store crawls in azure storage accounts 
long_description = file: README.md
license = Apache 2.0
classifiers =
    Framework :: Scrapy
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = scrapy_feedexporter_azure
install_requires =
    Scrapy==2.5.0
    azure-storage-file-datalake==12.4.0
    azure-identity==1.6.1
tests_require =
    pytest==6.2.5
    pytest-mock==3.6.1
    pytest-cov==2.12.1
